# kattis-solutions

./: .gitignore  CMakeLists.txt  readme.md
solutions/: a-new-alphabet.cpp  a-rational-sequence-2.cpp  a-rational-sequence-3.cpp  a-real-challenge.cpp  aaah.cpp  acm-contest-scoring.cpp  add-two-numbers.cpp  alphabet-spam.cpp  apaxiaaaaaaaaaaaans.cpp  apaxian-parent.cpp  arithmetic-functions.cpp  arm-coordination.cpp  arrangement.cpp  autori.cpp  average-character.cpp  avion.cpp  baby-bites.cpp  bacon-eggs-and-spam.cpp  basketball-one-on-one.cpp  batter-up.cpp  beavergnaw.cpp  bela.cpp  best-relay-team.cpp  betting.cpp  bijele.cpp  billiard.cpp  birthday-memorization.cpp  boat-parts.cpp  booking-a-room.cpp  boss-battle.cpp  bounding-robots.cpp  breaking-branches.cpp  broken-swords.cpp  building-pyramids.cpp  bus.cpp  card-trick.cpp  cetiri.cpp  cetvrta.cpp  chanukah-challenge.cpp  chocolate-division.cpp  (+211 more)
template/: readme.md  template.cpp
web/: gridsome.config.js  gridsome.server.js  package-lock.json  package.json
