cmake_minimum_required(VERSION 3.17)
project(kattis_problems)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -g -std=gnu++17")

add_executable(autori solutions/autori.cpp)
add_executable(hello-world solutions/hello-world.cpp)
add_executable(speed-limit solutions/speed-limit.cpp)
add_executable(symmetric-order solutions/symmetric-order.cpp)
add_executable(electrical-outlets solutions/electrical-outlets.cpp)
add_executable(tarifa solutions/tarifa.cpp)
add_executable(two-stones solutions/two-stones.cpp)
add_executable(speeding solutions/speeding.cpp)
add_executable(stuck-in-a-time-loop solutions/stuck-in-a-time-loop.cpp)
add_executable(solving-for-carrots solutions/solving-for-carrots.cpp)
add_executable(r2 solutions/r2.cpp)
add_executable(quality-adjusted-life-year solutions/quality-adjusted-life-year.cpp)
add_executable(quadrant-selection solutions/quadrant-selection.cpp)
add_executable(pot solutions/pot.cpp)
add_executable(planina solutions/planina.cpp)
add_executable(piece-of-cake solutions/piece-of-cake.cpp)
add_executable(pet solutions/pet.cpp)
add_executable(parking solutions/parking.cpp)
add_executable(nasty-hacks solutions/nasty-hacks.cpp)
add_executable(last-factorial-digit solutions/last-factorial-digit.cpp)
add_executable(jack-o-lantern-juxtaposition solutions/jack-o-lantern-juxtaposition.cpp)
add_executable(hissing-microphone solutions/hissing-microphone.cpp)
add_executable(heart-rate solutions/heart-rate.cpp)
add_executable(harshald-numbers solutions/harshald-numbers.cpp)
add_executable(greetings solutions/greetings.cpp)
add_executable(grass-seed-inc solutions/grass-seed-inc.cpp)
add_executable(fizzbuzz solutions/fizzbuzz.cpp)
add_executable(filip solutions/filip.cpp)
add_executable(faktor solutions/faktor.cpp)
add_executable(dice-cup solutions/dice-cup.cpp)
add_executable(cold-putter-science solutions/cold-putter-science.cpp)
add_executable(chanukah-challenge solutions/chanukah-challenge.cpp)
add_executable(bijele solutions/bijele.cpp)
add_executable(bela solutions/bela.cpp)
add_executable(batter-up solutions/batter-up.cpp)
add_executable(alphabet-spam solutions/alphabet-spam.cpp)
add_executable(reverse solutions/reverse.cpp)
add_executable(homework solutions/homework.cpp)
add_executable(fyi solutions/fyi.cpp)
add_executable(imperfect-gps solutions/imperfect-gps.cpp)
add_executable(shattered-cake solutions/shattered-cake.cpp)
add_executable(number-fun solutions/number-fun.cpp)
add_executable(hanging-out-on-the-terrace solutions/hanging-out-on-the-terrace.cpp)
add_executable(is-it-halloween solutions/is-it-halloween.cpp)
add_executable(zamka solutions/zamka.cpp)
add_executable(trik solutions/trik.cpp)
add_executable(transit-woes solutions/transit-woes.cpp)
add_executable(compound-words solutions/compound-words.cpp)
add_executable(easiest solutions/easiest.cpp)
add_executable(icpc-awards solutions/icpc-awards.cpp)
add_executable(ive-been-everywhere solutions/ive-been-everywhere.cpp)
add_executable(human-cannonball solutions/human-cannonball.cpp)
add_executable(stand-on-zanzibar solutions/stand-on-zanzibar.cpp)
add_executable(spavanac solutions/spavanac.cpp)
add_executable(simon-says solutions/simon-says.cpp)
add_executable(sibice solutions/sibice.cpp)
add_executable(seven-wonders solutions/seven-wonders.cpp)
add_executable(roaming-romans solutions/roaming-romans.cpp)
add_executable(line-them-up solutions/line-them-up.cpp)
add_executable(reversed-binary solutions/reversed-binary.cpp)