cmake_minimum_required(VERSION 3.17)
project(kattis_problems)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -g -std=gnu++17")
set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} "-static")


add_executable(autori solutions/autori.cpp)
add_executable(hello-world solutions/hello-world.cpp)
add_executable(speed-limit solutions/speed-limit.cpp)
add_executable(symmetric-order solutions/symmetric-order.cpp)
add_executable(electrical-outlets solutions/electrical-outlets.cpp)
add_executable(tarifa solutions/tarifa.cpp)
add_executable(two-stones solutions/two-stones.cpp)
add_executable(speeding solutions/speeding.cpp)
add_executable(stuck-in-a-time-loop solutions/stuck-in-a-time-loop.cpp)
add_executable(solving-for-carrots solutions/solving-for-carrots.cpp)
add_executable(r2 solutions/r2.cpp)
add_executable(quality-adjusted-life-year solutions/quality-adjusted-life-year.cpp)
add_executable(quadrant-selection solutions/quadrant-selection.cpp)
add_executable(pot solutions/pot.cpp)
add_executable(planina solutions/planina.cpp)
add_executable(piece-of-cake solutions/piece-of-cake.cpp)
add_executable(pet solutions/pet.cpp)
add_executable(parking solutions/parking.cpp)
add_executable(nasty-hacks solutions/nasty-hacks.cpp)
add_executable(last-factorial-digit solutions/last-factorial-digit.cpp)
add_executable(jack-o-lantern-juxtaposition solutions/jack-o-lantern-juxtaposition.cpp)
add_executable(hissing-microphone solutions/hissing-microphone.cpp)
add_executable(heart-rate solutions/heart-rate.cpp)
add_executable(harshald-numbers solutions/harshald-numbers.cpp)
add_executable(greetings solutions/greetings.cpp)
add_executable(grass-seed-inc solutions/grass-seed-inc.cpp)
add_executable(fizzbuzz solutions/fizzbuzz.cpp)
add_executable(filip solutions/filip.cpp)
add_executable(faktor solutions/faktor.cpp)
add_executable(dice-cup solutions/dice-cup.cpp)
add_executable(cold-putter-science solutions/cold-putter-science.cpp)
add_executable(chanukah-challenge solutions/chanukah-challenge.cpp)
add_executable(bijele solutions/bijele.cpp)
add_executable(bela solutions/bela.cpp)
add_executable(batter-up solutions/batter-up.cpp)
add_executable(alphabet-spam solutions/alphabet-spam.cpp)
add_executable(reverse solutions/reverse.cpp)
add_executable(homework solutions/homework.cpp)
add_executable(fyi solutions/fyi.cpp)
add_executable(imperfect-gps solutions/imperfect-gps.cpp)
add_executable(shattered-cake solutions/shattered-cake.cpp)
add_executable(number-fun solutions/number-fun.cpp)
add_executable(hanging-out-on-the-terrace solutions/hanging-out-on-the-terrace.cpp)
add_executable(is-it-halloween solutions/is-it-halloween.cpp)
add_executable(zamka solutions/zamka.cpp)
add_executable(trik solutions/trik.cpp)
add_executable(transit-woes solutions/transit-woes.cpp)
add_executable(compound-words solutions/compound-words.cpp)
add_executable(easiest solutions/easiest.cpp)
add_executable(icpc-awards solutions/icpc-awards.cpp)
add_executable(ive-been-everywhere solutions/ive-been-everywhere.cpp)
add_executable(human-cannonball solutions/human-cannonball.cpp)
add_executable(stand-on-zanzibar solutions/stand-on-zanzibar.cpp)
add_executable(spavanac solutions/spavanac.cpp)
add_executable(simon-says solutions/simon-says.cpp)
add_executable(sibice solutions/sibice.cpp)
add_executable(seven-wonders solutions/seven-wonders.cpp)
add_executable(roaming-romans solutions/roaming-romans.cpp)
add_executable(line-them-up solutions/line-them-up.cpp)
add_executable(reversed-binary solutions/reversed-binary.cpp)
add_executable(railroad solutions/railroad.cpp)
add_executable(quick-estimates solutions/quick-estimates.cpp)
add_executable(provinces-and-gold solutions/provinces-and-gold.cpp)
add_executable(poker-hand solutions/poker-hand.cpp)
add_executable(odd-man-out solutions/odd-man-out.cpp)
add_executable(oddities solutions/oddities.cpp)
add_executable(no-duplicates solutions/no-duplicates.cpp)
add_executable(modulo solutions/modulo.cpp)
add_executable(license-to-launch solutions/license-to-launch.cpp)
add_executable(ladder solutions/ladder.cpp)
add_executable(kornislav solutions/kornislav.cpp)
add_executable(judging-moose solutions/judging-moose.cpp)
add_executable(job-expenses solutions/job-expenses.cpp)
add_executable(janitor-troubles solutions/janitor-troubles.cpp)
add_executable(apaxian-parent solutions/apaxian-parent.cpp)
add_executable(final-exam solutions/final-exam.cpp)
add_executable(encoded-message solutions/encoded-message.cpp)
add_executable(drm-messages solutions/drm-messages.cpp)
add_executable(detailed-differences solutions/detailed-differences.cpp)
add_executable(datum solutions/datum.cpp)
add_executable(cudoviste solutions/cudoviste.cpp)
add_executable(cryptographers-conundrum solutions/cryptographers-conundrum.cpp)
add_executable(cetvrta solutions/cetvrta.cpp)
add_executable(avion solutions/avion.cpp)
add_executable(apaxiaaaaaaaaaaaans solutions/apaxiaaaaaaaaaaaans.cpp)
add_executable(acm-contest-scoring solutions/acm-contest-scoring.cpp)
add_executable(tetration solutions/tetration.cpp)
add_executable(tais-formula solutions/tais-formula.cpp)
add_executable(t9-spelling solutions/t9-spelling.cpp)
add_executable(synchronizing-lists solutions/synchronizing-lists.cpp)
add_executable(sum-squared-digits-function solutions/sum-squared-digits-function.cpp)
add_executable(stacking-cups solutions/stacking-cups.cpp)
add_executable(boat-parts solutions/boat-parts.cpp)
add_executable(weak-vertices solutions/weak-vertices.cpp)
add_executable(sum-kind-of-problem solutions/sum-kind-of-problem.cpp)
add_executable(star-arrangements solutions/star-arrangements.cpp)
add_executable(soylent solutions/soylent.cpp)
add_executable(soda-slurper solutions/soda-slurper.cpp)
add_executable(skocimis solutions/skocimis.cpp)
add_executable(skener solutions/skener.cpp)
add_executable(school-spirit solutions/school-spirit.cpp)
add_executable(relocation solutions/relocation.cpp)
add_executable(racing-around-the-alphabet solutions/racing-around-the-alphabet.cpp)
add_executable(stopwatch solutions/stopwatch.cpp)
add_executable(laptop-sticker solutions/laptop-sticker.cpp)
add_executable(jumbo-javelin solutions/jumbo-javelin.cpp)
add_executable(help-a-phd solutions/help-a-phd.cpp)
add_executable(forced-choice solutions/forced-choice.cpp)
add_executable(estimating-the-area-of-a-circle solutions/estimating-the-area.cpp)
add_executable(beavergnaw solutions/beavergnaw.cpp)
add_executable(rating-problems solutions/rating-problems.cpp)
add_executable(magic-trick solutions/magic-trick.cpp)
add_executable(a-real-challenge solutions/a-real-challenge.cpp)
add_executable(rijeci solutions/rijeci.cpp)
add_executable(quick-brown-fox solutions/quick-brown-fox.cpp)
add_executable(ptice solutions/ptice.cpp)
add_executable(mjehuric solutions/mjehuric.cpp)
add_executable(kleptography solutions/kleptography.cpp)
add_executable(kemija solutions/kemija.cpp)
add_executable(hangman solutions/hangman.cpp)
add_executable(greedy-polygons solutions/greedy-polygons.cpp)
add_executable(goat-rope solutions/goat-rope.cpp)
add_executable(gerrymandering solutions/gerrymandering.cpp)
add_executable(free-food solutions/free-food.cpp)
add_executable(fifty-shades-of-pink solutions/fifty-shades-of-pink.cpp)
add_executable(eligibility solutions/eligibility.cpp)
add_executable(drunk-vigenere solutions/drunk-vigenere.cpp)
add_executable(digit-product solutions/digit-product.cpp)
add_executable(dice-game solutions/dice-game.cpp)
add_executable(bus solutions/bus.cpp)
add_executable(aaah solutions/aaah.cpp)
add_executable(closing-the-loop solutions/closing-the-loop.cpp)
add_executable(unlock-pattern solutions/unlock-pattern.cpp)
add_executable(triple-texting solutions/triple-texting.cpp)
add_executable(tri solutions/tri.cpp)
add_executable(the-last-problem solutions/the-last-problem.cpp)
add_executable(the-key-to-cryptography solutions/the-key-to-cryptography.cpp)
add_executable(prsteni solutions/prsteni.cpp)
add_executable(prozor solutions/prozor.cpp)
add_executable(pizza-crust solutions/pizza-crust.cpp)
add_executable(peragrams solutions/peragrams.cpp)
add_executable(patuljci solutions/patuljci.cpp)
add_executable(ostgotska solutions/ostgotska.cpp)
add_executable(odd-gnome solutions/odd-gnome.cpp)
add_executable(musical-scales solutions/musical-scales.cpp)
add_executable(mixed-fractions solutions/mixed-fractions.cpp)
add_executable(mirror-images solutions/mirror-images.cpp)
add_executable(luhns-checksum-algorithm solutions/luhns-checksum-algorithm.cpp)
add_executable(lost-lineup solutions/lost-lineup.cpp)
add_executable(loo-rolls solutions/loo-rolls.cpp)
add_executable(left-beehind solutions/left-beehind.cpp)
add_executable(karte solutions/karte.cpp)